--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mkdirp": "^1.0.4",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "onchange": "^7.0.2"
+    "onchange": "^7.0.2",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
